# local-medical-triage-assistant

./: .gitignore  README.md  pyproject.toml
diagrams/: diagram_nlp.drawio
notebooks/: data_processing.ipynb
notebooks/.ipynb_checkpoints/: data_processing-checkpoint.ipynb
src/: main.py  streamlit_app.py
src/ui/: streamlit_app.py
src/utils/: medical_chat.py  pipeline.py
