[project]
name = "nlp-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.3.0",
    "pandas>=3.0.2",
    "faiss-cpu>=1.8",
    "numpy>=2.4.0",
    "sentence-transformers>=3.0.1",
    "rank-bm25>=0.2.2",
    "nltk",
    "datasets>=3.0.0",
    "streamlit>=1.45.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "tqdm>=4.66.0",
    "accelerate>=1.1.0",
    "matplotlib",
]

[tool.uv]
package = false
